@@ -595,7 +595,6 @@ void fetchExternalTools(String configName, List packages, File destdir, boolean 
                 rootProject.dependencies.add(fetchToolsConfig, "javafx:$basename:$ver", {
                     artifact {
                         name = basename
-                        version = ver
                         type = ext
                     }
                 })
@@ -706,7 +705,7 @@ void ant(String conf,   // platform configuration
             commandLine ant, "-Dbuild.compiler=javac1.7"
         }
         if ((conf != null) && !rootProject.defaultHostTarget.equals(conf)) {
-            def targetProperties = rootProject.ext[t.trim().toUpperCase()]
+            def targetProperties = rootProject.ext[conf.trim().toUpperCase()]
             args("-Dcross.platform=$conf")
             if (targetProperties.containsKey('arch')) {
                 args("-Dcross.platform.arch=${targetProperties.arch}")
@@ -988,7 +987,6 @@ compileTargets { t ->
     if (!targetProperties.containsKey('includeSWT')) targetProperties.includeSWT = true
     if (!targetProperties.containsKey('includeSwing')) targetProperties.includeSwing = true
     if (!targetProperties.containsKey('includeNull3d')) targetProperties.includeNull3d = true
-    if (!targetProperties.containsKey('includeLens')) targetProperties.includeLens = false
     if (!targetProperties.containsKey('includeMonocle')) targetProperties.includeMonocle = false
     if (!targetProperties.containsKey('includeEGL')) targetProperties.includeEGL = false
 
@@ -2036,19 +2034,12 @@ project(":controls") {
             "-DCSS_META_DATA_TEST_DIR=$cssDir"
     }
 
-    // TODO JDK-8174944 Css2Bin really should be moved out and put into buildSrc if it can be
-    // TODO could change script to dynamically locate all .css files and create bss for them, probably better
-    // TODO also not sure there is any benefit to having css files in the the runtime modules at all
     processResources << {
-        ["$moduleDir/com/sun/javafx/scene/control/skin/caspian/caspian.css",
-        "$moduleDir/com/sun/javafx/scene/control/skin/caspian/caspian-no-transparency.css",
-        "$moduleDir/com/sun/javafx/scene/control/skin/caspian/embedded-qvga.css",
-        "$moduleDir/com/sun/javafx/scene/control/skin/caspian/embedded.css",
-        "$moduleDir/com/sun/javafx/scene/control/skin/caspian/fxvk.css",
-        "$moduleDir/com/sun/javafx/scene/control/skin/caspian/highcontrast.css",
-        "$moduleDir/com/sun/javafx/scene/control/skin/modena/modena.css",
-        "$moduleDir/com/sun/javafx/scene/control/skin/modena/modena-no-transparency.css",
-        "$moduleDir/com/sun/javafx/scene/control/skin/modena/touch.css"].each { css ->
+        def cssFiles = fileTree(dir: "$moduleDir/com/sun/javafx/scene/control/skin")
+        cssFiles.include "**/*.css"
+        cssFiles.each { css ->
+            logger.info("converting CSS to BSS ${css}");
+
             javaexec {
                 executable = JAVA
                 workingDir = project.projectDir
@@ -2059,8 +2050,6 @@ project(":controls") {
         }
     }
 
-    // TODO - if the above TODO regarding Css2Bin is fixed, this should also
-    // be fixed.
     processShimsResources.dependsOn(project.task("copyShimBss", type: Copy) {
         from project.moduleDir
         into project.moduleShimsDir
@@ -2303,7 +2292,9 @@ project(":fxpackager") {
     compileJava.options.compilerArgs.addAll([
             "--add-exports=java.base/sun.security.timestamp=jdk.packager",
             "--add-exports=java.base/sun.security.x509=jdk.packager",
-            "--add-exports=jdk.jdeps/com.sun.tools.jdeps=jdk.packager",
+
+            // Note: retain jdk.jlink qualified export for cases where the JDK does
+            // not contain the jdk.packager module.
             "--add-exports=jdk.jlink/jdk.tools.jlink.internal.packager=jdk.packager",
 
             // Note: not in extras...
@@ -2553,8 +2544,10 @@ project(":fxpackager") {
         }
     }
 
-    assemble.dependsOn compileLauncher;
-    assemble.dependsOn buildJavaPackager
+    if (COMPILE_FXPACKAGER) {
+        assemble.dependsOn compileLauncher;
+        assemble.dependsOn buildJavaPackager
+    }
 
     classes << {
         // Copy all of the download libraries to libs directory for the sake of the IDEs
@@ -3423,21 +3416,6 @@ allprojects {
 
         compile.options.compilerArgs += ["-XDignore.symbol.file", "-encoding", "UTF-8"]
 
-        // If I am a module....
-        if (project.hasProperty('moduleSourcePath') &&
-                (project.hasProperty('buildModule') && project.buildModule)) {
-            project.compileJava {
-                options.compilerArgs.addAll([
-                    '-implicit:none',
-                    '--module-source-path', project.moduleSourcePath
-                    ])
-            }
-            // no jars needed for modules
-            project.jar.enabled = false
-
-            // and redirect the resources into the module
-            project.processResources.destinationDir = project.moduleDir
-        }
         // we use a custom javadoc command
         project.javadoc.enabled = false
 
@@ -3448,6 +3426,22 @@ allprojects {
             }
         }
     } // tasks with javaCompile
+
+    // If I am a module....
+    if (project.hasProperty('moduleSourcePath') &&
+            (project.hasProperty('buildModule') && project.buildModule)) {
+        project.compileJava {
+            options.compilerArgs.addAll([
+                '-implicit:none',
+                '--module-source-path', project.moduleSourcePath
+                ])
+        }
+        // no jars needed for modules
+        project.jar.enabled = false
+
+        // and redirect the resources into the module
+        project.processResources.destinationDir = project.moduleDir
+    }
 
     if (project.hasProperty('moduleSourcePathShim') &&
             project.sourceSets.hasProperty('shims')) {
@@ -4087,10 +4081,6 @@ compileTargets { t ->
                     exclude ("com/sun/prism/es2/EGL*")
                 }
 
-                if (!targetProperties.includeLens) {
-                    exclude ("com/sun/glass/ui/lens")
-                }
-
                 if (!targetProperties.includeMonocle) {
                     exclude ("com/sun/glass/ui/monocle")
                     exclude("com/sun/prism/es2/Monocle*")
@@ -4165,6 +4155,11 @@ compileTargets { t ->
             final File javafxProperties = file("${moduleLibDir}/javafx.properties")
             outputs.file(javafxProperties)
 
+            if (targetProperties.containsKey("javafxPlatformProperties")) {
+                final File javafxPlatformProperties = file("${moduleLibDir}/javafx.platform.properties")
+                outputs.file(javafxPlatformProperties)
+            }
+
             doLast {
                 mkdir moduleLibDir
 
@@ -4185,8 +4180,6 @@ compileTargets { t ->
                 // Embedded builds define this file as well
                 if (targetProperties.containsKey("javafxPlatformProperties")) {
                     final File javafxPlatformProperties = file("${moduleLibDir}/javafx.platform.properties")
-                    outputs.file(javafxPlatformProperties)
-
                     javafxPlatformProperties.delete()
                     javafxPlatformProperties << targetProperties.javafxPlatformProperties
                     javafxPlatformProperties << "\n"
